# model-agent

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  baseline_data.json  benchmark_performance.py  concurrent_data.json  inference.py  lts_logger.py  optimized_data.json  pytest.ini  requirements-dev.txt  requirements.txt  run.py  verify_precision.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: skill-check.yml  sync-from-gitcode.yml
Release_notes/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.0_CN.md
agents/: __init__.py
app/: __init__.py  _compat.py  config.py  main.py
app/core/: __init__.py  agent_engine.py  exceptions.py  llm_factory.py
app/models/: __init__.py  chat.py  config.py
app/services/: __init__.py  chat_service.py  claude_history_extractor.py  claude_history_uploader.py  config_service.py
app/tools/: __init__.py  claude_tools.py  doc_tools.py
ascend-skills-eval/: .dockerignore  .gitignore  Dockerfile  README.md
ascend-skills-eval/docs/: PERF_NOTES.md
ascend-skills-eval/tests/: test_eval.py
ascend-skills-eval/web-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
commands/: registry.py
docker/: OVERVIEW.md  OVERVIEW.zh.md
docker/1.0-a2-ubuntu22.04-py3.11/: Dockerfile
docker/1.0-a3-ubuntu22.04-py3.11/: Dockerfile
docs/perf/: kvcache-int8.md  (+4 more)
engine/: __init__.py  adapt_tools.py  agent_engine.py  claude_tools.py  deploy_tools.py  doc_tools.py  exceptions.py  llm_factory.py  memory.py  optimizer_tools.py  pta_tools.py  quantify_tools.py  registry.py  search_result_parser.py  search_tools.py  verify_tools.py  workflow_planner.py
mcp_servers/: __init__.py  cannbot_server.py  ms_agent_runner.py  ms_agent_server.py
scripts/: eval_skills.py  evaluate_skills.py  skill_evaluation_report.json  sync_cannbot_skills.py  sync_model_agent_skills.py
server/: __init__.py  config.py  main.py
skills/: Skills_list.md  skills.md  tiers.json
skills/optimization/ascendc-direct-invoke-template/references/add_kernel/: CMakeLists.txt  README.md  run.sh
tests/: __init__.py  comprehensive_test_suite.py  conftest.py  conftest_local.py  test_commands.py
tools/: README.md  check_skill_quality.py  check_skill_refs.py
(+2877 files in other folders)
